syntax = "proto3";

option java_package = "com.blog.proto";
option java_outer_classname = "BlogStore";

enum Status{
    StatusDefault = 0;
    StatusActive = 1;
    StatusDeleted = 2;
}
enum Authenticator{
    DEFAULT_AUTHENTICATOR = 0;
    SYSTEM_AUTHENTICATOR = 1;
    TEXT_AUTHENTICATOR = 2;
    EMAIL_AUTHENTICATOR = 3;
}
enum StoreTypeEnum {
    StoreDefault = 0;
    StoreCommit = 1;
    StoreTree = 2;
    StoreBlob = 3;
}
enum ReturnCode{
    UNKNOWN_RETURN_CODE = 0;
    OK = 1;
    ERROR = 2;
    USER_EXIST = 50;
    PASSWORD_ERROR = 51;
    USERNAME_OR_PASSWORD_IS_EMPTY = 52;
    USER_EMPTY = 53;
    NOT_YOURSELF = 54;
}

message User{
    string username = 1;
    string nickname = 2;
    string password = 3;
    Role role = 4;
    string email = 5;
    string phone = 6;
    int32 status = 7;
    int32 userId = 8;
    int32 authenticator = 9;
    bool rememberMe = 10;
}
message UserList {
    repeated User items = 1;
}
message Role{
    int32 id = 1;
    string roleName = 2;
    string note = 3;
    int32 status = 4;
    string icon = 5;
}
message RoleList{
    repeated Role items = 1;
}
message Menu{
    int32 menuId = 1;
    int32 parentId = 2;
    string name = 3;
    string icon = 4;
    string template = 5; 
    string hash = 6; 
    bool isDeletable = 7; 
    bool isDefaultShow = 8;
    int32 status = 9; 
}
message MenuList {
    repeated Menu items = 1;
}
message RspInfo{
    ReturnCode code = 1;
    string msg = 2;
}
message RspInfoList{
    ReturnCode code = 1;
    repeated RspInfo items = 2;
}

message License {
    string licenseId=1;
    string company=2;
    string edition=3;
    int64 validUntil=4;
    string productName = 5;
    string shortProductName = 6;
    int32 totalUser = 7;
    int64 totalVolume = 8;
    
    string value = 15;
    string createByName = 16;
    int32 createById = 17;
    int64 createAt = 18;
}


























message Operator {
    int64 date = 1;
    int32 gptype = 2;
    int32 gpid = 3;
}
message Commit {
    string commitHash = 1;
    Operator owner = 2;
    Operator committer = 3;
    string parent = 4;
    repeated string treeHash = 5;
}
message TreeItem {
    string treeHash = 1;
    Operator owner = 2;
    Operator committer = 3;
    string treeName = 4;
    int64 size = 5;
    repeated string itemtTree = 6;
    repeated BlobList file = 7;
}
message BlobList {
    repeated Blob blob = 1;
}
message Blob {
    string blobHash = 1;
    Operator owner = 2;
    Operator committer = 3;
}
message Store {
    
}
